@@ -1,11 +1,9 @@
 package org.jsoup.parser;
 
-import org.jsoup.helper.DescendableLinkedList;
 import org.jsoup.helper.StringUtil;
 import org.jsoup.nodes.*;
 
-import java.util.Iterator;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 /**
  * The Tree Builder's current state. Each state embodies the processing for the state, and transitions to other states.
@@ -58,7 +56,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, HtmlTreeBuilder tb) {
-            tb.insert("html");
+            tb.insertStartTag("html");
             tb.transition(BeforeHead);
             return tb.process(t);
         }
@@ -79,13 +77,13 @@ enum HtmlTreeBuilderState {
                 tb.setHeadElement(head);
                 tb.transition(InHead);
             } else if (t.isEndTag() && (StringUtil.in(t.asEndTag().name(), "head", "body", "html", "br"))) {
-                tb.process(new Token.StartTag("head"));
+                tb.processStartTag("head");
                 return tb.process(t);
             } else if (t.isEndTag()) {
                 tb.error(this);
                 return false;
             } else {
-                tb.process(new Token.StartTag("head"));
+                tb.processStartTag("head");
                 return tb.process(t);
             }
             return true;
@@ -159,7 +157,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, TreeBuilder tb) {
-            tb.process(new Token.EndTag("head"));
+            tb.processEndTag("head");
             return tb.process(t);
         }
     },
@@ -188,7 +186,7 @@ enum HtmlTreeBuilderState {
 
         private boolean anythingElse(Token t, HtmlTreeBuilder tb) {
             tb.error(this);
-            tb.process(new Token.EndTag("noscript"));
+            tb.processEndTag("noscript");
             return tb.process(t);
         }
     },
@@ -238,7 +236,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, HtmlTreeBuilder tb) {
-            tb.process(new Token.StartTag("body"));
+            tb.processStartTag("body");
             tb.framesetOk(true);
             return tb.process(t);
         }
@@ -276,7 +274,7 @@ enum HtmlTreeBuilderState {
                     if (name.equals("html")) {
                         tb.error(this);
                         // merge attributes onto real html
-                        Element html = tb.getStack().getFirst();
+                        Element html = tb.getStack().get(0);
                         for (Attribute attribute : startTag.getAttributes()) {
                             if (!html.hasAttr(attribute.getKey()))
                                 html.attributes().put(attribute);
@@ -285,7 +283,7 @@ enum HtmlTreeBuilderState {
                         return tb.process(t, InHead);
                     } else if (name.equals("body")) {
                         tb.error(this);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         if (stack.size() == 1 || (stack.size() > 2 && !stack.get(1).nodeName().equals("body"))) {
                             // only in fragment case
                             return false; // ignore
@@ -299,7 +297,7 @@ enum HtmlTreeBuilderState {
                         }
                     } else if (name.equals("frameset")) {
                         tb.error(this);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         if (stack.size() == 1 || (stack.size() > 2 && !stack.get(1).nodeName().equals("body"))) {
                             // only in fragment case
                             return false; // ignore
@@ -311,18 +309,18 @@ enum HtmlTreeBuilderState {
                                 second.remove();
                             // pop up to html element
                             while (stack.size() > 1)
-                                stack.removeLast();
+                                stack.remove(stack.size()-1);
                             tb.insert(startTag);
                             tb.transition(InFrameset);
                         }
                     } else if (StringUtil.in(name, Constants.InBodyStartPClosers)) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                     } else if (StringUtil.in(name, Constants.Headings)) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         if (StringUtil.in(tb.currentElement().nodeName(), Constants.Headings)) {
                             tb.error(this);
@@ -331,7 +329,7 @@ enum HtmlTreeBuilderState {
                         tb.insert(startTag);
                     } else if (StringUtil.in(name, Constants.InBodyStartPreListing)) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                         // todo: ignore LF if next token
@@ -342,44 +340,44 @@ enum HtmlTreeBuilderState {
                             return false;
                         }
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insertForm(startTag, true);
                     } else if (name.equals("li")) {
                         tb.framesetOk(false);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         for (int i = stack.size() - 1; i > 0; i--) {
                             Element el = stack.get(i);
                             if (el.nodeName().equals("li")) {
-                                tb.process(new Token.EndTag("li"));
+                                tb.processEndTag("li");
                                 break;
                             }
                             if (tb.isSpecial(el) && !StringUtil.in(el.nodeName(), Constants.InBodyStartLiBreakers))
                                 break;
                         }
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                     } else if (StringUtil.in(name, Constants.DdDt)) {
                         tb.framesetOk(false);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         for (int i = stack.size() - 1; i > 0; i--) {
                             Element el = stack.get(i);
                             if (StringUtil.in(el.nodeName(), Constants.DdDt)) {
-                                tb.process(new Token.EndTag(el.nodeName()));
+                                tb.processEndTag(el.nodeName());
                                 break;
                             }
                             if (tb.isSpecial(el) && !StringUtil.in(el.nodeName(), Constants.InBodyStartLiBreakers))
                                 break;
                         }
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                     } else if (name.equals("plaintext")) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                         tb.tokeniser.transition(TokeniserState.PLAINTEXT); // once in, never gets out
@@ -387,7 +385,7 @@ enum HtmlTreeBuilderState {
                         if (tb.inButtonScope("button")) {
                             // close and reprocess
                             tb.error(this);
-                            tb.process(new Token.EndTag("button"));
+                            tb.processEndTag("button");
                             tb.process(startTag);
                         } else {
                             tb.reconstructFormattingElements();
@@ -397,7 +395,7 @@ enum HtmlTreeBuilderState {
                     } else if (name.equals("a")) {
                         if (tb.getActiveFormattingElement("a") != null) {
                             tb.error(this);
-                            tb.process(new Token.EndTag("a"));
+                            tb.processEndTag("a");
 
                             // still on stack?
                             Element remainingA = tb.getFromStack("a");
@@ -417,7 +415,7 @@ enum HtmlTreeBuilderState {
                         tb.reconstructFormattingElements();
                         if (tb.inScope("nobr")) {
                             tb.error(this);
-                            tb.process(new Token.EndTag("nobr"));
+                            tb.processEndTag("nobr");
                             tb.reconstructFormattingElements();
                         }
                         Element el = tb.insert(startTag);
@@ -429,7 +427,7 @@ enum HtmlTreeBuilderState {
                         tb.framesetOk(false);
                     } else if (name.equals("table")) {
                         if (tb.getDocument().quirksMode() != Document.QuirksMode.quirks && tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                         tb.framesetOk(false);
@@ -447,7 +445,7 @@ enum HtmlTreeBuilderState {
                         tb.insertEmpty(startTag);
                     } else if (name.equals("hr")) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insertEmpty(startTag);
                         tb.framesetOk(false);
@@ -463,19 +461,19 @@ enum HtmlTreeBuilderState {
                             return false;
 
                         tb.tokeniser.acknowledgeSelfClosingFlag();
-                        tb.process(new Token.StartTag("form"));
+                        tb.processStartTag("form");
                         if (startTag.attributes.hasKey("action")) {
                             Element form = tb.getFormElement();
                             form.attr("action", startTag.attributes.get("action"));
                         }
-                        tb.process(new Token.StartTag("hr"));
-                        tb.process(new Token.StartTag("label"));
+                        tb.processStartTag("hr");
+                        tb.processStartTag("label");
                         // hope you like english.
                         String prompt = startTag.attributes.hasKey("prompt") ?
                                 startTag.attributes.get("prompt") :
                                 "This is a searchable index. Enter search keywords: ";
 
-                        tb.process(new Token.Character(prompt));
+                        tb.process(new Token.Character().data(prompt));
 
                         // input
                         Attributes inputAttribs = new Attributes();
@@ -484,10 +482,10 @@ enum HtmlTreeBuilderState {
                                 inputAttribs.put(attr);
                         }
                         inputAttribs.put("name", "isindex");
-                        tb.process(new Token.StartTag("input", inputAttribs));
-                        tb.process(new Token.EndTag("label"));
-                        tb.process(new Token.StartTag("hr"));
-                        tb.process(new Token.EndTag("form"));
+                        tb.processStartTag("input", inputAttribs);
+                        tb.processEndTag("label");
+                        tb.processStartTag("hr");
+                        tb.processEndTag("form");
                     } else if (name.equals("textarea")) {
                         tb.insert(startTag);
                         // todo: If the next token is a U+000A LINE FEED (LF) character token, then ignore that token and move on to the next one. (Newlines at the start of textarea elements are ignored as an authoring convenience.)
@@ -497,7 +495,7 @@ enum HtmlTreeBuilderState {
                         tb.transition(Text);
                     } else if (name.equals("xmp")) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.reconstructFormattingElements();
                         tb.framesetOk(false);
@@ -520,7 +518,7 @@ enum HtmlTreeBuilderState {
                             tb.transition(InSelect);
                     } else if (StringUtil.in(name, Constants.InBodyStartOptions)) {
                         if (tb.currentElement().nodeName().equals("option"))
-                            tb.process(new Token.EndTag("option"));
+                            tb.processEndTag("option");
                         tb.reconstructFormattingElements();
                         tb.insert(startTag);
                     } else if (StringUtil.in(name, Constants.InBodyStartRuby)) {
@@ -563,7 +561,7 @@ enum HtmlTreeBuilderState {
                             tb.transition(AfterBody);
                         }
                     } else if (name.equals("html")) {
-                        boolean notIgnored = tb.process(new Token.EndTag("body"));
+                        boolean notIgnored = tb.processEndTag("body");
                         if (notIgnored)
                             return tb.process(endTag);
                     } else if (StringUtil.in(name, Constants.InBodyEndClosers)) {
@@ -593,7 +591,7 @@ enum HtmlTreeBuilderState {
                     } else if (name.equals("p")) {
                         if (!tb.inButtonScope(name)) {
                             tb.error(this);
-                            tb.process(new Token.StartTag(name)); // if no p to close, creates an empty <p></p>
+                            tb.processStartTag(name); // if no p to close, creates an empty <p></p>
                             return tb.process(endTag);
                         } else {
                             tb.generateImpliedEndTags(name);
@@ -654,7 +652,7 @@ enum HtmlTreeBuilderState {
                             Element furthestBlock = null;
                             Element commonAncestor = null;
                             boolean seenFormattingElement = false;
-                            LinkedList<Element> stack = tb.getStack();
+                            ArrayList<Element> stack = tb.getStack();
                             // the spec doesn't limit to < 64, but in degenerate cases (9000+ stack depth) this prevents
                             // run-aways
                             final int stackSize = stack.size();
@@ -740,7 +738,7 @@ enum HtmlTreeBuilderState {
                         }
                     } else if (name.equals("br")) {
                         tb.error(this);
-                        tb.process(new Token.StartTag("br"));
+                        tb.processStartTag("br");
                         return false;
                     } else {
                         return anyOtherEndTag(t, tb);
@@ -757,10 +755,9 @@ enum HtmlTreeBuilderState {
 
         boolean anyOtherEndTag(Token t, HtmlTreeBuilder tb) {
             String name = t.asEndTag().name();
-            DescendableLinkedList<Element> stack = tb.getStack();
-            Iterator<Element> it = stack.descendingIterator();
-            while (it.hasNext()) {
-                Element node = it.next();
+            ArrayList<Element> stack = tb.getStack();
+            for (int pos = stack.size() -1; pos >= 0; pos--) {
+                Element node = stack.get(pos);
                 if (node.nodeName().equals(name)) {
                     tb.generateImpliedEndTags(name);
                     if (!name.equals(tb.currentElement().nodeName()))
@@ -822,18 +819,18 @@ enum HtmlTreeBuilderState {
                     tb.insert(startTag);
                     tb.transition(InColumnGroup);
                 } else if (name.equals("col")) {
-                    tb.process(new Token.StartTag("colgroup"));
+                    tb.processStartTag("colgroup");
                     return tb.process(t);
                 } else if (StringUtil.in(name, "tbody", "tfoot", "thead")) {
                     tb.clearStackToTableContext();
                     tb.insert(startTag);
                     tb.transition(InTableBody);
                 } else if (StringUtil.in(name, "td", "th", "tr")) {
-                    tb.process(new Token.StartTag("tbody"));
+                    tb.processStartTag("tbody");
                     return tb.process(t);
                 } else if (name.equals("table")) {
                     tb.error(this);
-                    boolean processed = tb.process(new Token.EndTag("table"));
+                    boolean processed = tb.processEndTag("table");
                     if (processed) // only ignored if in fragment
                         return tb.process(t);
                 } else if (StringUtil.in(name, "style", "script")) {
@@ -905,24 +902,25 @@ enum HtmlTreeBuilderState {
                         tb.error(this);
                         return false;
                     } else {
-                        tb.getPendingTableCharacters().add(c);
+                        tb.getPendingTableCharacters().add(c.getData());
                     }
                     break;
                 default:
+                    // todo - don't really like the way these table character data lists are built
                     if (tb.getPendingTableCharacters().size() > 0) {
-                        for (Token.Character character : tb.getPendingTableCharacters()) {
+                        for (String character : tb.getPendingTableCharacters()) {
                             if (!isWhitespace(character)) {
                                 // InTable anything else section:
                                 tb.error(this);
                                 if (StringUtil.in(tb.currentElement().nodeName(), "table", "tbody", "tfoot", "thead", "tr")) {
                                     tb.setFosterInserts(true);
-                                    tb.process(character, InBody);
+                                    tb.process(new Token.Character().data(character), InBody);
                                     tb.setFosterInserts(false);
                                 } else {
-                                    tb.process(character, InBody);
+                                    tb.process(new Token.Character().data(character), InBody);
                                 }
                             } else
-                                tb.insert(character);
+                                tb.insert(new Token.Character().data(character));
                         }
                         tb.newPendingTableCharacters();
                     }
@@ -954,7 +952,7 @@ enum HtmlTreeBuilderState {
                             t.isEndTag() && t.asEndTag().name().equals("table"))
                     ) {
                 tb.error(this);
-                boolean processed = tb.process(new Token.EndTag("caption"));
+                boolean processed = tb.processEndTag("caption");
                 if (processed)
                     return tb.process(t);
             } else if (t.isEndTag() && StringUtil.in(t.asEndTag().name(),
@@ -1016,7 +1014,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, TreeBuilder tb) {
-            boolean processed = tb.process(new Token.EndTag("colgroup"));
+            boolean processed = tb.processEndTag("colgroup");
             if (processed) // only ignored in frag case
                 return tb.process(t);
             return true;
@@ -1034,7 +1032,7 @@ enum HtmlTreeBuilderState {
                         tb.transition(InRow);
                     } else if (StringUtil.in(name, "th", "td")) {
                         tb.error(this);
-                        tb.process(new Token.StartTag("tr"));
+                        tb.processStartTag("tr");
                         return tb.process(startTag);
                     } else if (StringUtil.in(name, "caption", "col", "colgroup", "tbody", "tfoot", "thead")) {
                         return exitTableBody(t, tb);
@@ -1074,7 +1072,7 @@ enum HtmlTreeBuilderState {
                 return false;
             }
             tb.clearStackToTableBodyContext();
-            tb.process(new Token.EndTag(tb.currentElement().nodeName())); // tbody, tfoot, thead
+            tb.processEndTag(tb.currentElement().nodeName()); // tbody, tfoot, thead
             return tb.process(t);
         }
 
@@ -1117,7 +1115,7 @@ enum HtmlTreeBuilderState {
                         tb.error(this);
                         return false;
                     }
-                    tb.process(new Token.EndTag("tr"));
+                    tb.processEndTag("tr");
                     return tb.process(t);
                 } else if (StringUtil.in(name, "body", "caption", "col", "colgroup", "html", "td", "th")) {
                     tb.error(this);
@@ -1136,7 +1134,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean handleMissingTr(Token t, TreeBuilder tb) {
-            boolean processed = tb.process(new Token.EndTag("tr"));
+            boolean processed = tb.processEndTag("tr");
             if (processed)
                 return tb.process(t);
             else
@@ -1195,9 +1193,9 @@ enum HtmlTreeBuilderState {
 
         private void closeCell(HtmlTreeBuilder tb) {
             if (tb.inTableScope("td"))
-                tb.process(new Token.EndTag("td"));
+                tb.processEndTag("td");
             else
-                tb.process(new Token.EndTag("th")); // only here if th or td in scope
+                tb.processEndTag("th"); // only here if th or td in scope
         }
     },
     InSelect {
@@ -1224,22 +1222,22 @@ enum HtmlTreeBuilderState {
                     if (name.equals("html"))
                         return tb.process(start, InBody);
                     else if (name.equals("option")) {
-                        tb.process(new Token.EndTag("option"));
+                        tb.processEndTag("option");
                         tb.insert(start);
                     } else if (name.equals("optgroup")) {
                         if (tb.currentElement().nodeName().equals("option"))
-                            tb.process(new Token.EndTag("option"));
+                            tb.processEndTag("option");
                         else if (tb.currentElement().nodeName().equals("optgroup"))
-                            tb.process(new Token.EndTag("optgroup"));
+                            tb.processEndTag("optgroup");
                         tb.insert(start);
                     } else if (name.equals("select")) {
                         tb.error(this);
-                        return tb.process(new Token.EndTag("select"));
+                        return tb.processEndTag("select");
                     } else if (StringUtil.in(name, "input", "keygen", "textarea")) {
                         tb.error(this);
                         if (!tb.inSelectScope("select"))
                             return false; // frag
-                        tb.process(new Token.EndTag("select"));
+                        tb.processEndTag("select");
                         return tb.process(start);
                     } else if (name.equals("script")) {
                         return tb.process(t, InHead);
@@ -1252,7 +1250,7 @@ enum HtmlTreeBuilderState {
                     name = end.name();
                     if (name.equals("optgroup")) {
                         if (tb.currentElement().nodeName().equals("option") && tb.aboveOnStack(tb.currentElement()) != null && tb.aboveOnStack(tb.currentElement()).nodeName().equals("optgroup"))
-                            tb.process(new Token.EndTag("option"));
+                            tb.processEndTag("option");
                         if (tb.currentElement().nodeName().equals("optgroup"))
                             tb.pop();
                         else
@@ -1292,12 +1290,12 @@ enum HtmlTreeBuilderState {
         boolean process(Token t, HtmlTreeBuilder tb) {
             if (t.isStartTag() && StringUtil.in(t.asStartTag().name(), "caption", "table", "tbody", "tfoot", "thead", "tr", "td", "th")) {
                 tb.error(this);
-                tb.process(new Token.EndTag("select"));
+                tb.processEndTag("select");
                 return tb.process(t);
             } else if (t.isEndTag() && StringUtil.in(t.asEndTag().name(), "caption", "table", "tbody", "tfoot", "thead", "tr", "td", "th")) {
                 tb.error(this);
                 if (tb.inTableScope(t.asEndTag().name())) {
-                    tb.process(new Token.EndTag("select"));
+                    tb.processEndTag("select");
                     return (tb.process(t));
                 } else
                     return false;
@@ -1451,15 +1449,19 @@ enum HtmlTreeBuilderState {
     private static boolean isWhitespace(Token t) {
         if (t.isCharacter()) {
             String data = t.asCharacter().getData();
-            // todo: this checks more than spec - "\t", "\n", "\f", "\r", " "
-            for (int i = 0; i < data.length(); i++) {
-                char c = data.charAt(i);
-                if (!StringUtil.isWhitespace(c))
-                    return false;
-            }
-            return true;
+            return isWhitespace(data);
         }
         return false;
+    }
+
+    private static boolean isWhitespace(String data) {
+        // todo: this checks more than spec - "\t", "\n", "\f", "\r", " "
+        for (int i = 0; i < data.length(); i++) {
+            char c = data.charAt(i);
+            if (!StringUtil.isWhitespace(c))
+                return false;
+        }
+        return true;
     }
 
     private static void handleRcData(Token.StartTag startTag, HtmlTreeBuilder tb) {
